--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.5",
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
